--- a/content/fcrackzip-bruteforce-tutorial.html
+++ b/content/fcrackzip-bruteforce-tutorial.html
@@ -53,7 +53,7 @@
 					<!-- NAV -->
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
-							<div class="collapse navbar-collapse" id="navbar">
+							<div class="collapse navbar-collapse" id="navbar" style="padding-right: 100px;border:none;margin-left:2%">
 								<p>General<p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
@@ -118,7 +118,7 @@
 						  </div>
 							<div class="col-sm-4">
 								<!-- InstanceBeginEditable name="image" -->
-							  	<center><img src="../images/zip.png" alt="FCrackZip" height="160" width="160"></center>
+							  	<center><img src="../images/zip.png" alt="FCrackZip" style="max-height:160px;max-width:160px;" class="image"></center>
 								<!-- InstanceEndEditable --></div>
 					  </div>
 						<!-- InstanceBeginEditable name="article" -->
