--- a/content/heartbleed.html
+++ b/content/heartbleed.html
@@ -53,7 +53,7 @@
 					<!-- NAV -->
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
-							<div class="collapse navbar-collapse" id="navbar">
+							<div class="collapse navbar-collapse" id="navbar" style="padding-right: 100px;border:none;margin-left:2%">
 								<p>General<p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
@@ -113,7 +113,7 @@
 						  </div>
 							<div class="col-sm-4">
 								<!-- InstanceBeginEditable name="image" -->
-							  	<center><img src="../images/heartbleed.png" alt="Heartbleed" height="175" width="150"></center>
+							  	<center><img src="../images/heartbleed.png" alt="Heartbleed" style="max-height:175px;max-width:150px;" class="image"></center>
 								<!-- InstanceEndEditable --></div>
 					  </div>
 						<!-- InstanceBeginEditable name="article" -->
@@ -127,7 +127,7 @@
                             <p>The vulnerability is essentially in the heartbeat that's sent between two systems communicating over TLS/SSL. Let's say we are system 1 and Google is system 2. The heartbeat is there to check if the connection between us and Google is still alive, in case there is no activity on the connection for a longer period of time. The heartbeat itself is an encrypted packet sent from us to Google, with a maximum size of 64KB. Let's say we send a heartbeat packet with size 32KB to Google, the packet tells the Google server to expect a 32KB message, so the Google server allocates 32KB of memory, to store the encrypted data from the heatbeat packet, then it reads it back out of memory and sends the heartbeat packet with size 32KB back to our browser.</p>
                             <p>How do we exploit this, you might wonder? In order to read encrypted data from the TLS/SSL connection we need to trick the receiving server, in this case Google, in thinking it's receiving more data than we are actually sending in the heartbeat. What we're gonna do is forge a malicious heartbeat packet that is gonna tell Google: "Hey, get ready for 64KB of data!", but in reality we are only sending a heartbeat packet of 16KB to Google. This causes Google to allocate 64KB in its memory, and only store 16KB of data in it, since we only sent Google 16KB. Now the flaw in the system is that the receiving end (Google) doesn't check if it has actually received 64KB of data. Google has allocated 64KB in its memory, and will also send back 64KB of data it reads from its own memory, even though we only sent 16KB. This means that Google will return 16KB of data + 48KB of data that is currently present in memory. Now we have extracted 48KB of information that we actually have no access to!</p>
                             <p>The information you receive could either be nothing but random crap, or you could receive SSL private keys, usernames, passwords or other sensitive data. Below is an example of such output:</p>
-                            <img src="https://vagn.es/img/heartbleedoutput1.png" alt="Heartbleed printable output" width="100%">
+                            <center><img src="https://vagn.es/img/heartbleedoutput1.png" alt="Heartbleed printable output" style="max-height:556px;max-width:1111px;" class="image"></center>
                             <li><h5>Why is it vulnerable?</h5></li>
                             <p>The vulnerability comes forth from a single line of code in <b>OpenSSL</b>.</p>
                             <code>
@@ -139,7 +139,7 @@
                             <p>Copying data on a computer is not as straight forward as you think, because there is no such thing as empty memory. This means that 'bp', the location where 'pl' is going to be copied, isn't empty, but full of data that has been marked for deletion, waiting to be overwritten, by 'pl' for example.</p>
                             <p>How it should work is that when memcpy takes our 16KB heartbeat data from 'pl' and copies it to location 'bp' with payload = 16KB in Google's memory, the location in memory will overwrite the old data that has been marked for deletion, with our new 16KB of data. It will be a perfect fit since according to the payload value, 16KB has been reserved in Google's memory.</p>
                             <p>I can hear you thinking already: "Yeah so what if i change the 'payload' value to 64KB while our 'pl' data size is only 16KB?". That is exactly how we can extract extra data from Google memory. memcpy will make a 64KB reservation on the Google server's memory but only 16KB of data will be overwritten, leaving 48KB of still intact (marked for deletion) data available in the reservation. The server will return the full 64KB of data back to us, including the 48KB of random data.</p>
-                            <center><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Simplified_Heartbleed_explanation.svg/1024px-Simplified_Heartbleed_explanation.svg.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Simplified_Heartbleed_explanation.svg/1024px-Simplified_Heartbleed_explanation.svg.png" width="500" height="500"></a></center>
+                            <center><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Simplified_Heartbleed_explanation.svg/1024px-Simplified_Heartbleed_explanation.svg.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/11/Simplified_Heartbleed_explanation.svg/1024px-Simplified_Heartbleed_explanation.svg.png" style="max-height:512px;max-width:512px;" class="image"></a></center>
                             <li><h5>Check for vulnerability</h5></li>
                             <p>If you want to check your server for the heartbleed vulnerability, you can do this in a couple of ways.</p>
                             <ol>
