--- a/content/ssh.html
+++ b/content/ssh.html
@@ -53,7 +53,7 @@
 					<!-- NAV -->
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
-							<div class="collapse navbar-collapse" id="navbar">
+							<div class="collapse navbar-collapse" id="navbar" style="padding-right: 100px;border:none;margin-left:2%">
 								<p>General<p>
 								<ul class="nav navbar-nav">
 									<li><a href="../index.html">HOME</a></li>
@@ -118,7 +118,7 @@
 						  </div>
 							<div class="col-sm-4">
 								<!-- InstanceBeginEditable name="image" -->
-							  	<center><img src="../images/ssh.png" alt="SSH" height="160" width="160"></center>
+							  	<center><img src="../images/ssh.png" alt="SSH" style="max-height:160px;max-width:160px;" class="image"></center>
 								<!-- InstanceEndEditable --></div>
 					  </div>
 						<!-- InstanceBeginEditable name="article" -->
@@ -138,7 +138,7 @@
 									<ol>
 										<li>Local Port Forwarding</li>
 										<br />
-										<center><img src="../images/SSH_localforward.png" alt="SSH Local Port Forwarding" height="143" width="543"></center>
+										<center><img src="../images/SSH_localforward.png" alt="SSH Local Port Forwarding" style="max-height:143px;max-width:543px;" class="image"></center>
 										<br />
 										<p>The client wants to access a resource on the server in a different subnet, let's say a webserver (port 80), but he's denied by the firewall. The firewall denies all incoming traffic, except for SSH on port 22. The client is allowed to SSH to the server, and we can leverage this with the command below.</p>
 										<br />
