--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<!-- NAV -->
 					<nav class="navbar navbar-default">
 						<div class="container-fluid">
-							<div class="collapse navbar-collapse" id="navbar">
+							<div class="collapse navbar-collapse" id="navbar" style="padding-right: 100px;border:none;margin-left:2%">
 								<p>General<p>
 								<ul class="nav navbar-nav">
 									<li><a href="index.html">HOME</a></li>
